style.css
* {
	margin: 0;
	padding: 0;
	box-sizing: border-box;
}
html {
	--primary-background-color: rgb(250, 249, 248);
	--sectionHeight: 100vh;
	--foregroundPosition: 3000;
	--backgroundPosition: -3000;
	background-color: var(
		--primary-background-color
	);
	overflow-x: hidden;
	scroll-behavior: smooth;
}
body {
	font-size: 1.25rem;
	font-family: 'Comfortaa', cursive !important;
}
nav {
	animation: cubic-bezier(0.645, 0.045, 0.355, 1)
		fadein 2s;
}
.mlp-section {
	display: flex;
	position: relative;
	flex-flow: column nowrap;
	min-height: var(--sectionHeight);
	width: 100vw;
}
a {
	text-decoration: none !important;
	color: var(--font-main-color) !important;
}
canvas {
	image-rendering: pixelated;
}
.shadow-frame {
	box-shadow: 3px 6px 6px rgba(59, 58, 57, 0.5);
}

.image img.side-image {
	width: 300px;
	margin: auto;
}

.button.is-link.submit-button {
	background-color: #6ea4b6;
}

.button.is-link.submit-button:hover {
	background-color: #6ea4b6;
}
.Nav-Canvas {
	z-index: var(--foregroundPosition);
	position: absolute;
	top: 0;
	left: 0;
	height: 100%;
	width: 100%;
}
.mlp-title {
	animation: fadein 2s ease-out;
	font-size: calc(1rem + 5.2vw);
	font-weight: 700;
	color: #5c5c5c;
	height: 100%;
	margin-inline-start: 12%;
	margin-block-start: 10%;
}
.subtitle {
	font-weight: 700;
}
.mlp-paragraph {
	margin-block-end: 1.5rem; /*Intégrer les marges dans le calcul des hauteurs ??*/
	margin-inline-start: 2vw;
	line-height: 3rem;
	backdrop-filter: blur(1px);
	font-weight: 600;
}

.column.flex-column,
.flex-column {
	display: flex;
	flex-direction: column;
	flex-wrap: wrap;
}

.absolute-origin {
	position: absolute;
	top: 0;
	left: 0;
}

.in-background {
	z-index: var(--backgroundPosition);
}

.contact-form {
	max-width: 600px;
}

.two-third-width {
	width: 73%;
}

.full-width {
	width: 100%;
}

@keyframes fadein {
	0% {
		opacity: 0;
	}
	100% {
		opacity: 1;
	}
}

